package com.romina.taskapi.entities;

public enum EstadoTarea {
    PENDIENTE,
    PAUSADA,
    COMPLETADA;
}
